# D2RShowMeWhen

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: release.yml
app/: index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: actions.ts  bootstrap.ts  ctx.ts  events.ts  hotkeys.ts  i18n.ts  main.ts  overlay.ts  render.ts  styles.css  types.ts  utils.ts
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/core/: models.rs
app/src-tauri/src/hotkeys/: macos_tap.rs  mod.rs  windows_keyboard.rs
app/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
app/src-tauri/src/storage/: mod.rs
doc/: running.md
docs/: architecture.md  developer-guide.md  user-guide.md
scripts/: upload-macos-release.sh
