[package]
name = "d2rshowmewhen-app"
version = "1.0.25"
description = "Cross-platform D2RShowMeWhen rewrite"
authors = ["vanyushkin"]
license = "MIT"
repository = "https://github.com/vanyushkin/D2RShowMeWhen"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "d2rshowmewhen_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-log = "2"
dirs = "6.0.0"
thiserror = "2.0.17"
rdev = "0.5"
